# homework

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  display  main.cpp  python_tmp.py  test.py  test.py.back  tmp.cpp
